Add access to last frame time in Timer.
Also, add ability to query a Texture's contents back from card.